fix: z-index error

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -27,6 +27,13 @@
     background-repeat: no-repeat;
     background-clip: text;
     -webkit-text-fill-color: transparent;
+    @include dark-mode {
+      background-image: linear-gradient(
+        145.52deg,
+        #daabff 15.52%,
+        #7b61ff 100.29%
+      );
+    }
   }
   &__text {
     max-width: 480px;
@@ -41,7 +48,7 @@
       visibility: hidden;
     }
     @include dark-mode {
-      opacity: 24%;
+      opacity: 14%;
     }
   }
 }
